--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "chobits",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0"
-  }
+    "name": "chobits",
+    "version": "1.0.0",
+    "engines": {
+        "node": "16.x"
+    }, 
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.21.1",
+        "discord.js": "^13.1.0",
+        "dotenv": "^10.0.0"
+    }
 }
